# gis-city-county

./: README.md  azure-pipelines.yml  environment.yml  pyproject.toml
.github/disabled_workflows/: README.md  build_package_to_ghpages.yml  static_linting_flake8_mypy.yml
.github/workflows/: build_package_to_ghpages.yml  python-package-conda.yml  python-package.yml  static_linting_flake8_mypy.yml
bunnyhop/: bunny.py  retrieve.py
docs/planning/: BoundaryUpdates.py  Default.atbx
docs/planning/Default.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000010.gdbtable  a00000010.gdbtablx  a00000010.spx  a00000011.freelist  a00000011.gdbtable  a00000011.gdbtablx  a00000011.spx  a00000012.gdbtable  a00000012.gdbtablx  a00000013.gdbtable  a00000013.gdbtablx  a00000013.spx  a00000014.gdbtable  timestamps
scripts/: README.md  _metadata.py  _services.py  backing_service_report.py  swap_services.py  update_service_definitions.py
src/bunnyhop/: __init__.py  __main__.py  bunny.py  cdt_arcgis_auth.py  census_population.py  coastline.py  config.py  config_github.py  config_private_template.py  logging_and_alerts.py  primary_domain.py  retrieve.py
src/bunnyhop/data/: DLA_CityNames.xlsx  DLA_CountyNames.xlsx  (+2 more)
tests/: test_bunnyhop.py  test_coastline_fix.py  test_logging.py  test_processing.py  test_retrieve.py
(+3 files in other folders)
